--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="./login.html">Sign in</a></li>
+                <li class="nav-item"><a class="nav-link" href="./signin.html">Sign in</a></li>
                 <!--<li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,11 +36,11 @@
                     -->
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
+                <a class="btn btn-outline-dark" href="cart.html" data-toggle="modal" data-target="#exampleModal">
                     <span class="bi-cart-fill"></span>
                     Cart
                     <span class="badge">0</span>
-                </button>
+                </a>
             </form>
         </div>
     </nav>
