--- a/signup.html
+++ b/signup.html
@@ -6,16 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
     <!-- Bootstrap CSS -->
     <link href="css/style.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 
-
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <title>Login</title>
+    <title>Sign up</title>
 </head>
 
 <body>
@@ -23,7 +21,7 @@
         <div class="container">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item"><a class="nav-link" aria-current="page" href="./index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link active" href="./login.html">Sing in</a></li>
+                <li class="nav-item"><a class="nav-link" href="./signin.html">Sign in</a></li>
                 <!--<li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,11 +34,11 @@
                     -->
             </ul>
             <form class="d-flex">
-                <button class="btn btn-outline-dark" type="submit">
+                <a class="btn btn-outline-dark" href="cart.html" data-toggle="modal" data-target="#exampleModal">
                     <span class="bi-cart-fill"></span>
                     Cart
                     <span class="badge">0</span>
-                </button>
+                </a>
             </form>
         </div>
     </nav>
@@ -48,7 +46,7 @@
     <header class="bg-dark py-5">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Sign in</h1>
+                <h1 class="display-4 fw-bolder">Sign up</h1>
                 <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
             </div>
         </div>
@@ -56,18 +54,29 @@
 
     <div class="form container px-4 px-lg-5 mt-5">
         <form>
-            <div class="form-group my-3">
-                <input type="email" class="form-control" placeholder="Enter email">
+            <div class="form-row my-3">
+                <div class="form-group">
+                    <input type="text" class="sign form-control" placeholder="Enter name">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="sign form-control" placeholder="Enter surname">
+                </div>
             </div>
             <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Enter password">
+                <input type="email" class="sign form-control" placeholder="Enter email">
+            </div>
+            <div class="form-group my-3">
+                <input type="password" class="sign form-control" placeholder="Enter password">
+            </div>
+            <div class="form-group my-3">
+                <input type="password" class="sign form-control" placeholder="Confirm password">
             </div>
         </form>
-        <btn class="btn btn-outline-dark mt-4 mb-3">Sign in</btn>
-        <span>Don't have an account yet? <a href="./register.html">Sign up now!</a></span>
+        <button class="btn btn-outline-dark mt-4 mb-3">Sign up</button>
+        <span>Do you have an account? <a href="./signin.html">Sign in!</a></span>
     </div>
 
-    
+
     <footer class="bg-dark fixed-bottom">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
     </footer>
