--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container mt-5 d-flex justify-content-center">
         <div class="row">
             <div class="col">
-                <input class="form-control form-control-lg form-control-borderless" type="search"
+                <input class="sign form-control form-control-lg form-control-borderless" type="search"
                     placeholder="Search keywords">
             </div>
             <div class="col">
