--- a/cart.html
+++ b/cart.html
@@ -97,11 +97,11 @@
         </div>
         <div class="cart-footer m-3">
             <h4 class="cart-price">Total price: 420,69€</h4>
-            <a class="btn btn-outline-dark my-2" href="./checkout.html">Checkout</button>
+            <a class="btn btn-outline-dark my-2" href="./checkout.html">Checkout</a>
         </div>
     </div>
 
-    <footer class="bg-dark fixed-bottom">
+    <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
     </footer>
 
