--- a/checkout.html
+++ b/checkout.html
@@ -85,10 +85,10 @@
                     Agree to terms and conditions
                   </label>
         </form>
-        <button class="btn btn-success">Order</button>
+        <button class="btn btn-success mb-4">Order</button>
     </div>
 
-    <footer class="bg-dark fixed-bottom">
+    <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
     </footer>
 
