--- a/signin.html
+++ b/signin.html
@@ -67,7 +67,7 @@
         <span>Don't have an account yet? <a href="./signup.html">Sign up now!</a></span>
     </div>
 
-    <footer class="bg-dark fixed-bottom">
+    <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
     </footer>
 
