--- a/signup.html
+++ b/signup.html
@@ -77,7 +77,7 @@
     </div>
 
 
-    <footer class="bg-dark fixed-bottom">
+    <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
     </footer>
 
