Spacing on pages.

--- a/cart.html
+++ b/cart.html
@@ -51,55 +51,58 @@
             </div>
         </div>
     </header>
-
-    <div class="container mt-5">
-        <div class="cart-header d-flex justify-content-between mx-3">
-            <p>X products in cart</p>
-            <a class="cart-remove-all" href="#">Remove all products from cart</a>
-        </div>
-        <div class="cart-body list-group">
-            <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="mb-0 d-flex align-items-center">
-                    <img class="cart-image" src="assets/product.jpg">
-                    <h4 class="cart-product-name mb-0"><a href="./product.html">Cras justo odio</a></h4>
+    <section class="my-5 py-5">
+        <div class="container">
+            <div class="row">
+                <div class="cart-header d-flex justify-content-between mx-3">
+                    <p>X products in cart</p>
+                    <a class="cart-remove-all" href="#">Remove all products from cart</a>
                 </div>
-                <div class="mb-0 mx-5 d-flex align-items-center">
-                    <h5 class="mb-0 mx-3">10,23€</h5>
-                    <input class="cart-product-counter" type="number" value="3">
-                    <button class="btn btn-warning mx-3">Update</button>
-                    <button class="btn btn-danger">Remove</button>
+                <div class="cart-body list-group">
+                    <div class="list-group-item px-2 py-4 d-flex justify-content-between align-items-center">
+                        <div class="mb-0 d-flex align-items-center">
+                            <img class="cart-image" src="assets/product.jpg">
+                            <h4 class="cart-product-name mb-0"><a href="./product.html">Cras justo odio</a></h4>
+                        </div>
+                        <div class="mb-0 mx-5 d-flex align-items-center">
+                            <h5 class="mb-0 mx-3">10,23€</h5>
+                            <input class="cart-product-counter" type="number" value="3">
+                            <button class="btn btn-warning mx-3">Update</button>
+                            <button class="btn btn-danger">Remove</button>
+                        </div>
+                    </div>
+                    <div class="list-group-item px-2 py-4 d-flex justify-content-between align-items-center">
+                        <div class="mb-0 d-flex align-items-center">
+                            <img class="cart-image" src="assets/product.jpg">
+                            <h4 class="cart-product-name mb-0"><a href="./product.html">Brt</a></h4>
+                        </div>
+                        <div class="mb-0 mx-5 d-flex align-items-center">
+                            <h5 class="mb-0 mx-3">0,23€</h5>
+                            <input class="cart-product-counter" type="number" value="3">
+                            <button class="btn btn-warning mx-3">Update</button>
+                            <button class="btn btn-danger">Remove</button>
+                        </div>
+                    </div>
+                    <div class="list-group-item px-2 py-4 d-flex justify-content-between align-items-center">
+                        <div class="mb-0 d-flex align-items-center">
+                            <img class="cart-image" src="assets/product.jpg">
+                            <h4 class="cart-product-name mb-0"><a href="./product.html">Asd</a></h4>
+                        </div>
+                        <div class="mb-0 mx-5 d-flex align-items-center">
+                            <h5 class="mb-0 mx-3">120,23€</h5>
+                            <input class="cart-product-counter" type="number" value="3">
+                            <button class="btn btn-warning mx-3">Update</button>
+                            <button class="btn btn-danger">Remove</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="cart-footer m-3">
+                    <h4 class="cart-price">Total price: 420,69€</h4>
+                    <a class="btn btn-outline-dark my-2" href="./checkout.html">Checkout</a>
                 </div>
             </div>
-            <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="mb-0 d-flex align-items-center">
-                    <img class="cart-image" src="assets/product.jpg">
-                    <h4 class="cart-product-name mb-0"><a href="./product.html">Brt</a></h4>
-                </div>
-                <div class="mb-0 mx-5 d-flex align-items-center">
-                    <h5 class="mb-0 mx-3">0,23€</h5>
-                    <input class="cart-product-counter" type="number" value="3">
-                    <button class="btn btn-warning mx-3">Update</button>
-                    <button class="btn btn-danger">Remove</button>
-                </div>
-            </div>
-            <div class="list-group-item d-flex justify-content-between align-items-center">
-                <div class="mb-0 d-flex align-items-center">
-                    <img class="cart-image" src="assets/product.jpg">
-                    <h4 class="cart-product-name mb-0"><a href="./product.html">Asd</a></h4>
-                </div>
-                <div class="mb-0 mx-5 d-flex align-items-center">
-                    <h5 class="mb-0 mx-3">120,23€</h5>
-                    <input class="cart-product-counter" type="number" value="3">
-                    <button class="btn btn-warning mx-3">Update</button>
-                    <button class="btn btn-danger">Remove</button>
-                </div>
-            </div>
         </div>
-        <div class="cart-footer m-3">
-            <h4 class="cart-price">Total price: 420,69€</h4>
-            <a class="btn btn-outline-dark my-2" href="./checkout.html">Checkout</a>
-        </div>
-    </div>
+    </section>
 
     <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
