--- a/product.html
+++ b/product.html
@@ -58,35 +58,37 @@
                 <li class="breadcrumb-item active">{Product name}</li>
             </ol>
         </nav>
-        <div class="product-row mt-5">
-            <div class="product-image pt-5">
-                <img src="./assets/product.jpg">
-            </div>
-            <div class="product-description">
-                <p class="pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                    printer
-                    took a galley of type and scrambled it to make a type specimen book. It has survived not only five
-                    centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                    popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
-                    more
-                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <h5 class="my-3">40,00€</h5>
-                <div class="product-rating mb-4">
-                    <span>Ocena: </span>
-                    <div class="product-stars mx-2">
-                        <div class="bi-star-fill"></div>
-                        <div class="bi-star-fill"></div>
-                        <div class="bi-star-fill"></div>
-                        <div class="bi-star-fill"></div>
-                        <div class="bi-star"></div>
-                    </div>
+        <section class="mb-5 pb-5">
+            <div class="product-row my-5 py-5">
+                <div class="product-image pt-5">
+                    <img src="./assets/product.jpg">
                 </div>
-                <hr>
-                <btn class="btn btn-outline-dark my-2" href="#">Add to cart</btn>
+                <div class="product-description">
+                    <p class="pt-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer
+                        took a galley of type and scrambled it to make a type specimen book. It has survived not only five
+                        centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
+                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and
+                        more
+                        recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <h5 class="my-3">40,00€</h5>
+                    <div class="product-rating mb-4">
+                        <span>Ocena: </span>
+                        <div class="product-stars mx-2">
+                            <div class="bi-star-fill"></div>
+                            <div class="bi-star-fill"></div>
+                            <div class="bi-star-fill"></div>
+                            <div class="bi-star-fill"></div>
+                            <div class="bi-star"></div>
+                        </div>
+                    </div>
+                    <hr>
+                    <btn class="btn btn-outline-dark my-2" href="#">Add to cart</btn>
+                </div>
             </div>
-        </div>
+        </section>
     </div>
 
 
