--- a/checkout.html
+++ b/checkout.html
@@ -52,41 +52,43 @@
         </div>
     </header>
 
-    <div class="form container mt-5">
-        <form>
-            <div class="form-row my-3">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name">
+    <section>
+        <div class="form container my-5 py-5">
+            <form>
+                <div class="form-row my-3">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Surname">
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Surname">
+                <div class="form-group my-3">
+                    <input type="email" class="form-control" placeholder="Email">
                 </div>
-            </div>
-            <div class="form-group my-3">
-                <input type="email" class="form-control" placeholder="Email">
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Phone number">
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Address">
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Post code">
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="City">
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Country">
-            </div>
-            <input type="checkbox" class="mb-4" id="terms" value="">
-                <label class="form-check-label" for="terms">
-                    Agree to terms and conditions
-                  </label>
-        </form>
-        <button class="btn btn-success mb-4">Order</button>
-    </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Phone number">
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Address">
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Post code">
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="City">
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Country">
+                </div>
+                <input type="checkbox" class="mb-4" id="terms" value="">
+                    <label class="form-check-label" for="terms">
+                        Agree to terms and conditions
+                    </label>
+            </form>
+            <button class="btn btn-success mb-4">Order</button>
+        </div>
+    </section>
 
     <footer class="bg-dark">
         <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
