--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
 
     <footer class="bg-dark">
-        <p class="footer-text py-3">Made with <span style="color: red">♥</span></p>
+        <p class="footer-text py-3">Made with <span class="text-danger">♥</span></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
